--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,6 @@
 	<description>sakila api for frontend react project </description>
 	<properties>
 		<java.version>21</java.version>
-		<sonar.projectKey>Townsy1996_react-film-app</sonar.projectKey>
-		<sonar.organization>townsy1996</sonar.organization>
-		<sonar.login>6bb3a260df4bd1d26af5c54ab288d91bd232573a</sonar.login>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -48,19 +45,6 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
-		<dependency>
-			<groupId>io.cucumber</groupId>
-			<artifactId>cucumber-java</artifactId>
-			<version>6.10.4</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>io.cucumber</groupId>
-			<artifactId>cucumber-junit</artifactId>
-			<version>6.10.4</version>
-			<scope>test</scope>
-		</dependency>
 	</dependencies>
 
 	<build>
@@ -84,25 +68,24 @@
 				<version>0.8.7</version>
 				<executions>
 					<execution>
+						<id>prepare-agent</id>
 						<goals>
 							<goal>prepare-agent</goal>
 						</goals>
 					</execution>
 					<execution>
 						<id>report</id>
-						<phase>prepare-package</phase>
 						<goals>
 							<goal>report</goal>
 						</goals>
+						<configuration>
+							<formats>
+								<format>XML</format>
+							</formats>
+						</configuration>
 					</execution>
 				</executions>
-				<configuration>
-					<includes>
-						<include>com/example/sakiladb/Steps/**/*</include>
-					</includes>
-				</configuration>
 			</plugin>
-
 		</plugins>
 	</build>
 
